# alkhafi-security-framework

./: .gitignore  README.md  garden_memory.db  pyproject.toml
al_kahfi/: cli.py  main.py
al_kahfi/core/: interfaces.py  orchestrator.py  schemas.py
al_kahfi/plugins/barrier/: guardrail.py
al_kahfi/plugins/cave/: config.py  filter.py  threat_providers.py
al_kahfi/plugins/garden/: cognitive_providers.py  config.py  filter.py  memory.py  prompts.py
al_kahfi/plugins/journey/: config.py  context_providers.py  filter.py
